# MiniAudio

./: CMakeLists.txt  main.c  main.h
dsp/: dsp.c  dsp.h  dsputil.h
music/: notes.c  notes.h  sound.h
synth/: synth.c  synth.h
